Add profile information
Allow the user to retrieve his own information from an ID Token and create the user if not found
